--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,12 +7,136 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:id="@+id/header"
+        android:layout_width="match_parent"
+        android:layout_height="90dp"
+        android:background="#8E44AD"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
+
+    <ImageView
+        android:id="@+id/myIcon"
+        android:layout_width="80dp"
+        android:layout_height="73dp"
+        android:layout_alignBottom="@+id/header"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="325dp"
+        android:layout_marginStart="325dp"
+        android:layout_marginBottom="8dp"
+        android:clickable="true"
+        android:src="@mipmap/icon"
+        app:layout_constraintBottom_toBottomOf="@id/header"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <ImageView
+        android:id="@+id/addProject"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="336dp"
+        android:layout_marginTop="16dp"
+        android:clickable="true"
+        android:src="@drawable/add_project"
+        app:layout_constraintMargin="16dp"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <LinearLayout
+        android:id="@+id/seacrh"
+        android:layout_width="170dp"
+        android:layout_height="57dp"
+        android:layout_alignBottom="@+id/header"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="150dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="150dp"
+        android:layout_marginBottom="20dp"
+        android:clickable="true"
+        android:gravity="center"
+        android:orientation="horizontal"
+        app:layout_constraintStart_toStartOf="@id/header"
+        app:layout_constraintTop_toTopOf="@id/header">
+
+        <EditText
+            android:id="@+id/searchInput"
+            android:layout_width="86dp"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            android:fontFamily="@font/inter_medium"
+            android:inputType="text"
+            android:text="Search"
+            android:textAlignment="center"
+            android:textColor="#FFFFFF"
+            android:textSize="22dp" />
+
+        <ImageView
+            android:id="@+id/searchIcon"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:src="@drawable/search"
+            app:layout_constraintHorizontal_bias="0.0" />
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/Project"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/header"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="26dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="26dp"
+        android:fontFamily="@font/inter_bold"
+        android:text="Projects"
+        android:textColor="#000000"
+        android:textSize="32dp" />
+
+
+    <LinearLayout
+        android:id="@+id/listProject"
+        android:layout_width="360dp"
+        android:layout_height="437dp"
+        android:layout_above="@+id/bottomNavigationView"
+        android:layout_below="@+id/Project"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="26dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="26dp"
+        android:layout_marginBottom="26dp"
+        android:background="@drawable/border"
+        android:orientation="vertical">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewProjects"
+            android:layout_width="360dp"
+            android:layout_height="448dp" />
+
+    </LinearLayout>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
+        android:layout_width="match_parent"
+        android:layout_height="90dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:background="#8E44AD"
+        app:itemIconTint="#DBCDE0"
+        android:elevation="2dp"
+        app:itemIconSize="45dp"
+        app:labelVisibilityMode="unlabeled"
+        app:menu="@menu/bottom_menu" />
+
+
+</RelativeLayout>
