--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -10,13 +9,7 @@
         android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="90dp"
-        android:background="#8E44AD"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
-
+        android:background="#8E44AD" />
 
     <ImageView
         android:id="@+id/myIcon"
@@ -25,20 +18,19 @@
         android:layout_alignBottom="@+id/header"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="325dp"
         android:layout_marginStart="325dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="307dp"
         android:layout_marginBottom="8dp"
         android:clickable="true"
-        android:src="@mipmap/icon"
-        app:layout_constraintBottom_toBottomOf="@id/header"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:src="@mipmap/icon" />
+
 
     <ImageView
         android:id="@+id/addProject"
         android:layout_width="55dp"
         android:layout_height="55dp"
-        android:layout_marginStart="336dp"
+        android:layout_marginStart="325dp"
         android:layout_marginTop="16dp"
         android:clickable="true"
         android:src="@drawable/add_project"
@@ -46,24 +38,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
     <LinearLayout
-        android:id="@+id/seacrh"
-        android:layout_width="170dp"
-        android:layout_height="57dp"
+        android:id="@+id/seacrhContainer"
+        android:layout_width="115dp"
+        android:layout_height="51dp"
         android:layout_alignBottom="@+id/header"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="150dp"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="150dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginEnd="128dp"
+        android:layout_marginBottom="19dp"
         android:clickable="true"
         android:gravity="center"
-        android:orientation="horizontal"
-        app:layout_constraintStart_toStartOf="@id/header"
-        app:layout_constraintTop_toTopOf="@id/header">
+        android:orientation="horizontal">
 
         <EditText
             android:id="@+id/searchInput"
@@ -71,19 +60,16 @@
             android:layout_height="wrap_content"
             android:background="@null"
             android:fontFamily="@font/inter_medium"
-            android:inputType="text"
-            android:text="Search"
+            android:hint="Search"
             android:textAlignment="center"
-            android:textColor="#FFFFFF"
-            android:textSize="22dp" />
+            android:textColorHint="#FFFFFF"
+            android:textSize="24dp" />
 
         <ImageView
             android:id="@+id/searchIcon"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
-            android:src="@drawable/search"
-            app:layout_constraintHorizontal_bias="0.0" />
-
+            android:src="@drawable/search" />
     </LinearLayout>
 
     <TextView
@@ -100,7 +86,6 @@
         android:text="Projects"
         android:textColor="#000000"
         android:textSize="32dp" />
-
 
     <LinearLayout
         android:id="@+id/listProject"
@@ -121,7 +106,6 @@
             android:id="@+id/recyclerViewProjects"
             android:layout_width="360dp"
             android:layout_height="448dp" />
-
     </LinearLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
@@ -137,6 +121,5 @@
         app:itemIconSize="45dp"
         app:labelVisibilityMode="unlabeled"
         app:menu="@menu/bottom_menu" />
-
 
 </RelativeLayout>
